Upgrade config test

--- a/MB Studio/App.config
+++ b/MB Studio/App.config
@@ -1,91 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="MB_Studio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup>
-    <userSettings>
-        <MB_Studio.Properties.Settings>
-            <setting name="setNames" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>#Set1</string>
-                        <string>#Set2</string>
-                        <string>#Set3</string>
-                        <string>#Set4</string>
-                        <string>#Set5</string>
-                        <string>#Set6</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="setAttribs" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>0|0|0|0|0|0</string>
-                        <string>0|0|0|0|0|0</string>
-                        <string>0|0|0|0|0|0</string>
-                        <string>0|0|0|0|0|0</string>
-                        <string>0|0|0|0|0|0</string>
-                        <string>0|0|0|0|0|0</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="setItems" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="setItemsFlags" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                        <string>-</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="projectsFolderPath" serializeAs="String">
-                <value>.\Projects\</value>
-            </setting>
-            <setting name="languageIndex" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="show3DView" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="loadSavedObjects" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="updateChannel" serializeAs="String">
-                <value>stable</value>
-            </setting>
-            <setting name="baseColor" serializeAs="String">
-                <value>56, 56, 56</value>
-            </setting>
-            <setting name="showUpdaterConsole" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="runAutoUpdate" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </MB_Studio.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="MB_Studio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="MB_Studio_CLI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <!--<section name="defaultStudio" type="System.Configuration.NameValueSectionHandler, system, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, Custom=null"/>-->
+    </sectionGroup>
+  </configSections>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+  </startup>
+
+  <!--<userSettings file="studio.config"/>-->
+
+  <userSettings>
+    <MB_Studio.Properties.Settings>
+      <setting name="setNames" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>#Set1</string>
+            <string>#Set2</string>
+            <string>#Set3</string>
+            <string>#Set4</string>
+            <string>#Set5</string>
+            <string>#Set6</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="setAttribs" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>0|0|0|0|0|0</string>
+            <string>0|0|0|0|0|0</string>
+            <string>0|0|0|0|0|0</string>
+            <string>0|0|0|0|0|0</string>
+            <string>0|0|0|0|0|0</string>
+            <string>0|0|0|0|0|0</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="setItems" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="setItemsFlags" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+            <string>-</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="projectsFolderPath" serializeAs="String">
+        <value>.\Projects\</value>
+      </setting>
+      <setting name="languageIndex" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="show3DView" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="loadSavedObjects" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="updateChannel" serializeAs="String">
+        <value>stable</value>
+      </setting>
+      <setting name="baseColor" serializeAs="String">
+        <value>56, 56, 56</value>
+      </setting>
+      <setting name="showUpdaterConsole" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="runAutoUpdate" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="firstRun" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </MB_Studio.Properties.Settings>
+    <MB_Studio_CLI.Properties.Settings>
+      <setting name="lastOpenedProjects" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+          </ArrayOfString>
+        </value>
+      </setting>
+    </MB_Studio_CLI.Properties.Settings>
+  </userSettings>
+
 </configuration>
