--- a/MB Studio/Properties/Settings.settings
+++ b/MB Studio/Properties/Settings.settings
@@ -70,5 +70,8 @@
     <Setting Name="runAutoUpdate" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="firstRun" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
