Added TutorStep + made little Tutor example

--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Manager\Support\External\AddTypeFromOtherMod.Designer.cs">
       <DependentUpon>AddTypeFromOtherMod.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manager\Support\TutorStep.cs" />
     <Compile Include="Manager\Support\TutorForm.cs">
       <SubType>Form</SubType>
     </Compile>
