--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -146,6 +146,12 @@
     <Compile Include="Main\CreateProject.Designer.cs">
       <DependentUpon>CreateProject.cs</DependentUpon>
     </Compile>
+    <Compile Include="Main\PathSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main\PathSelector.Designer.cs">
+      <DependentUpon>PathSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager\QuestManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -337,6 +343,9 @@
     <EmbeddedResource Include="Main\MBOptions.resx">
       <DependentUpon>MBOptions.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Main\PathSelector.resx">
+      <DependentUpon>PathSelector.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manager\SkillManager.resx">
       <DependentUpon>SkillManager.cs</DependentUpon>
     </EmbeddedResource>
@@ -483,6 +492,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="installerScripts\MB Studio.ico" />
+    <Content Include="files\images\warband.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Manager\minimumRequiredForManager.txt" />
     <None Include="MB_Warband.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
