renamed module.ini.dat to module.ini.wdb

--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -165,7 +165,7 @@
     <None Include="changelog">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="files\module.ini.dat">
+    <None Include="files\module.ini.wdb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="installerScripts\Compile x64.bat" />
