--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -152,6 +152,12 @@
     <Compile Include="Main\PathSelector.Designer.cs">
       <DependentUpon>PathSelector.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manager\SoundManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\SoundManager.Designer.cs">
+      <DependentUpon>SoundManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager\QuestManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -346,6 +352,9 @@
     <EmbeddedResource Include="Main\PathSelector.resx">
       <DependentUpon>PathSelector.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Manager\SoundManager.resx">
+      <DependentUpon>SoundManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manager\QuestManager.resx">
       <DependentUpon>QuestManager.cs</DependentUpon>
     </EmbeddedResource>
@@ -501,7 +510,7 @@
     <Content Include="files\images\warband.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Manager\minimumRequiredForManager.txt" />
+    <Content Include="Manager\Support\minimumRequiredForManager.txt" />
     <None Include="MB_Warband.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
